<resources>
    <string name="app_name">GabrielLevesqueDuval</string>
    <string name="bonjour">Bonjour!</string>
    <string name="titreTaille">Taille préférée pour une nouvelle partie</string>
    <string name="petiteTaille">Petite</string>
    <string name="moyenneTaille">Moyenne</string>
    <string name="grandeTaille">Grande</string>
    <string name="switchPrecedente">Continuer partie précédente</string>
    <string name="boutonConnexion">Connexion</string>
    <string name="boutonDeconnexion">Deconnexion</string>
    <string name="boutonJouer">Jouer</string>
    <string name="boutonEnLigne">Jouer en-ligne</string>
    <string name="boutonParametres">Paramètres</string>
    <string name="nom1">Alice</string>
    <string name="nom2">Robert</string>
    <string name="messageGagnantRouge">Les rouges gagnent</string>
    <string name="messageGagnantBleu">Les bleus gagnent</string>

</resources>
