<?xml version="1.0" encoding="utf-8"?>
<ca.cours5b5.gabriellevesqueduval.vues.pages.PParametres xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.AParametres">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTaille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titreTaille"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/colorFond"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBoxPetite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petiteTaille" />

            <CheckBox
                android:id="@+id/checkBoxMoyenne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moyenneTaille" />

            <CheckBox
                android:id="@+id/checkBoxGrande"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grandeTaille" />
        </LinearLayout>

        <Switch
            android:id="@+id/switchReprendre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/switchPrecedente" />

    </LinearLayout>
</ca.cours5b5.gabriellevesqueduval.vues.pages.PParametres>